--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build && touch out/.nojekyll && touch out/CNAME && echo 2025.ucscieee.lk > out/CNAME",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@sanity/client": "^6.22.4",
     "@sanity/image-url": "^1.1.0",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.16",
     "next": "14.2.16",
