--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && touch out/.nojekyll && touch out/CNAME && echo 2025.ucscieee.lk > out/CNAME",
+    "build": "next build && touch out/.nojekyll && touch out/CNAME && echo ucscieee.lk > out/CNAME",
     "start": "next start",
     "lint": "next lint",
     "deploy": "gh-pages -d out --dotfiles"
